# TimeStitch

./: .gitignore  NEW_README.md  README.md  app.py  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json  wrangler.jsonc
api/: index.py  search.py
api/app/: main.py
api/app/routers/: search.py
api/app/services/: transcript_index.py  youtube.py
api/tests/: test_search_router.py  test_youtube_service.py
backend/: requirements.txt
backend/app/: main.py
backend/app/routers/: search.py
backend/app/services/: youtube.py
cloudflare-worker/: package.json  test.mjs  wrangler.toml
cloudflare-worker/src/: index.js
extension/src/background/: posthog-sw.ts  service-worker.ts  transcript-fetcher.test.ts  transcript-fetcher.ts
extension/src/lib/: sse.ts
extension/src/shared/: constants.ts  messaging.ts  types.ts  utils.test.ts  utils.ts
extension/src/sidepanel/: App.tsx
frontend/: package-lock.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
src/app/: page.tsx
src/components/: BackgroundEffect.tsx  Header.tsx  Hero.tsx  SearchForm.tsx  SearchResults.tsx  TimeRangeSelector.tsx  VideoPlayer.tsx
src/lib/: utils.ts
src/types/: index.ts
youtube-transcript-searcher/: .gitignore  app.py
