[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.12"
classifiers = [
  "Private :: Do Not Upload",
]
dependencies = [
    "fastapi==0.109.2",
    "google-api-python-client==2.118.0",
    "pydantic==2.6.1",
    "python-dotenv==1.0.1",
    "uvicorn==0.27.1",
    "werkzeug>=1.0.1",
    "youtube-transcript-api==1.2.4",
]
